# orin

./: .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  bun.lockb  package.json  svelte.config.js  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/1-init/: up.sql
src-tauri/src/: lib.rs
src/routes/: +page.svelte
src/routes/add_document/: +page.svelte
src/routes/documents/: +page.svelte
src/routes/startup/: +page.js  +page.svelte
