[package]
name = "orin"
version = "0.1.0"
description = "A document management system for personal use."
authors = ["Daniel Niccoli"]
license = "MIT"
repository = "https://github.com/danielniccoli/orin"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-dialog = "2.0.0-rc"
env_logger = "0"
log = "0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
